Update flowscale config

--- a/flowscale.yml
+++ b/flowscale.yml
@@ -3,11 +3,11 @@ custom_nodes: custom_nodes.json
 user_models: user_models.json
 user_custom_nodes: user_custom_nodes.json
 workflows:
-  - id: sjyhskt0d8m
+  - id: 20kju1giniz
     name: basic.json
     description: ''
     file: simple_workflows/basic.json
-  - id: 0cjcjf7mfru
+  - id: wbwiw5tdvi
     name: random.json
     description: ''
     file: simple_workflows/random.json
