Update flowscale config

--- a/flowscale.yml
+++ b/flowscale.yml
@@ -3,26 +3,7 @@ custom_nodes: custom_nodes.json
 user_models: user_models.json
 user_custom_nodes: user_custom_nodes.json
 workflows:
-  - id: 20kju1giniz
+  - id: 7dfp1fegmdu
     name: basic.json
     description: ''
     file: simple_workflows/basic.json
-    inputs:
-      - path: 6.inputs.text
-        parameter_name: text
-        type: string
-        demo_type: text
-        category: input
-        randomize: false
-      - path: 7.inputs.text
-        parameter_name: text
-        type: string
-        demo_type: text
-        category: input
-        randomize: false
-    outputs:
-      - demo_type: text
-  - id: wbwiw5tdvi
-    name: random.json
-    description: ''
-    file: simple_workflows/random.json
