--- a/flowscale.yml
+++ b/flowscale.yml
@@ -8,11 +8,23 @@ workflows:
     description: ''
     file: simple_workflows/basic.json
     inputs:
+      - path: 9.inputs.filename_prefix
+        parameter_name: filename_prefix
+        type: string
+        demo_type: text
+        category: output
+        randomize: true
       - path: 6.inputs.text
         parameter_name: text
         type: string
         demo_type: text
         category: input
         randomize: false
+      - path: 7.inputs.text
+        parameter_name: text
+        type: string
+        demo_type: text
+        category: input
+        randomize: false
     outputs:
-      - demo_type: text
+      - demo_type: image
