Update flowscale config

--- a/flowscale.yml
+++ b/flowscale.yml
@@ -3,28 +3,11 @@ custom_nodes: custom_nodes.json
 user_models: user_models.json
 user_custom_nodes: user_custom_nodes.json
 workflows:
-  - id: 7dfp1fegmdu
+  - id: 46hrwmlxmc2
     name: basic.json
     description: ''
     file: simple_workflows/basic.json
-    inputs:
-      - path: 9.inputs.filename_prefix
-        parameter_name: filename_prefix
-        type: string
-        demo_type: text
-        category: output
-        randomize: true
-      - path: 6.inputs.text
-        parameter_name: text
-        type: string
-        demo_type: text
-        category: input
-        randomize: false
-      - path: 7.inputs.text
-        parameter_name: text
-        type: string
-        demo_type: text
-        category: input
-        randomize: false
-    outputs:
-      - demo_type: image
+  - id: tzaj9bzowno
+    name: chatgpt_workflow.json
+    description: ''
+    file: simple_workflows/chatgpt_workflow.json
